# mark-backend

./: .env.example  .gitignore  README.md  build.sh  langgraph.json  pyproject.toml  requirements.txt
ai_chatbot/: models.py  serializers.py  urls.py  views.py
ai_chatbot/graphs/: __init__.py  agents.py  content_pipeline.py  memory_manager.py  orchestrator.py  prompts.py  state.py  tools.py
ai_chatbot/migrations/: 0001_initial.py
authentication/: backends.py  client.py  schema.py  urls.py  views.py  views_dev.py
brand_dna_extractor/: admin.py  apps.py  graph.py  models.py  serializers.py  urls.py  utils.py  views.py
brand_dna_extractor/graphs/: agent.py  state.py
brand_dna_extractor/migrations/: 0001_initial.py  0002_brand_tenant_id.py
config/: settings.py  urls.py  utils.py
content_templates/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
content_templates/migrations/: 0001_initial.py
content_templates/services/: ingest.py  search.py
creation_studio/: admin.py  apps.py  auth_debug.py  authentication.py  embedding_service.py  ingest_templates.py  models.py  models_core.py  schema_extensions.py  serializers.py  serializers_core.py  sia_client.py  urls.py  views.py  views_api.py  views_core.py  views_oauth.py  views_test.py
creation_studio/auth/: __init__.py  backends.py  debug.py  schema.py
creation_studio/graphs/: agent.py  state.py
creation_studio/management/: __init__.py
creation_studio/migrations/: 0001_initial.py  0002_branddna_brand_creation_generation_mediafile_and_more.py  0002_branddna_preview_brand_creation_generation_and_more.py  0003_align_schema_v3.py  0003_brand_tenant_id_creation_user_id_post_user_id_and_more.py  0004_alter_brand_uuid_alter_branddna_uuid_and_more.py  0004_mediafile.py  0005_alter_creation_post_type_alter_post_post_type.py  0005_creation_brand_nullable.py
creation_studio/models/: __init__.py  core.py  templates.py
creation_studio/serializers/: __init__.py  core.py  templates.py
creation_studio/templates/: embedding.py  ingest.py
creation_studio/views/: __init__.py  content.py  core.py  dev.py  templates.py
platform_insights/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
platform_insights/migrations/: 0001_initial.py  0002_remove_post_user_id.py
platform_insights/services/: meta_auth.py  (+1 more)
(+81 files in other folders)
