[project]
name = "mark-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Diomer-Sandoval",email = "d.sandoval@ofiservices.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
