[project]
name = "mark-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Diomer-Sandoval",email = "d.sandoval@ofiservices.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "cloudinary (>=1.36.0)",
    "firebase-admin (>=6.5.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "openai (>=2.20.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "pgvector (>=0.2.5,<1.0.0)",
    "djangorestframework (>=3.14.0,<4.0.0)",
    "drf-spectacular (>=0.27.0,<1.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "langgraph-cli[inmem] (>=0.4.15,<0.5.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
